Added URLs to button and new pages
Added URLs to buttons that make a direct link to some of the project's repos I've worked on.
New pages have been created to display all of my personal Professional Work Experience and projects.

--- a/index.html
+++ b/index.html
@@ -80,11 +80,6 @@
 								<li>Test Engineer for the Integrations team's pull requests.</li>
 							</ul>
 						</div>
-						<div>
-							<ul class="actions special">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</div>
 					</div>
 
 					<hr class="minborder">
@@ -98,11 +93,6 @@
 									from UTRGV, Zoom, and MCU sessions from paper to Google Spreadsheets.</li>
 								<li>Provided in-person or online technical support to over 100
 									virtual sessions using Cisco MCU 4510 throughout the campus.</li>
-							</ul>
-						</div>
-						<div>
-							<ul class="actions special">
-								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
 						</div>
 					</div>
@@ -122,18 +112,12 @@
 									Google Analytics.</li>
 							</ul>
 						</div>
-						<div>
-							<ul class="actions special">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</div>
 					</div>
 				</div>
 
 				<footer class="major">
-					<br>
 					<p>
-						To view all of other work experiences, click <a href="generic.html">here</a>
+						To view all of other work experiences, click <a href="professional-experience.html">here</a>
 					</p>
 				</footer>
 			</section>
@@ -151,8 +135,8 @@
 						<p>Designed a bug tracker web application that monitors bugs
 							that occur in a SaaS application that uses Azure Databases
 							to store info.</p>
-						<div class="githubButton">
-							<a href="generic.html" class="button">View on GitHub</a>
+						<div>
+							<a href="https://github.com/chrismtz100/Bug-Bag-Manager" class="button">View on GitHub</a>
 						</div>
 					</li>
 					<li>
@@ -161,7 +145,7 @@
 						<h3><b>Pokemon JS Version</b></h3>
 						<p>Created a Pokemon battle simulator using JavaScript and HTML/CSS only. </p>
 						<div class="githubButton">
-							<a href="generic.html" class="button">View on GitHub</a>
+							<a href="https://github.com/chrismtz100/Pokemon-JavaScript-Version" class="button">View on GitHub</a>
 						</div>
 					</li>
 					<li>
@@ -170,8 +154,8 @@
 						<p>Built a multisensory device that records data in any environment
 							inside a 30 ft. radius that incorporated 4 sensors and communicated
 							with each other in real-time to provide complex environmental data.</p>
-						<div class="githubButton">
-							<a href="generic.html" class="button">View on GitHub</a>
+						<div>
+							<a href="https://github.com/chrismtz100/Cellular-Utility-Expander" class="button">View on GitHub</a>
 						</div>
 					</li>
 					<li>
@@ -180,15 +164,14 @@
 						<h3><b>Salt Carpet Printer</b></h3>
 						<p>Designed and developed a GUI that communicated with a
 							Raspberry Pi that printed using salt.</p>
-						<div class="githubButton">
-							<a href="generic.html" class="button">View on GitHub</a>
+						<div>
+							<a href="https://github.com/chrismtz100/Salt-Carpet-Printer-V1.0-GUI" class="button">View on GitHub</a>
 						</div>
 					</li>
 				</ul>
 				<footer class="major">
-					<br>
 					<p>
-						To view all of other projects, click <a href="generic.html">here</a>
+						To view all of other projects, click <a href="all-projects.html">here</a>
 					</p>
 				</footer>
 			</section>
