Updated image css and added social media links
Updated margins on images for projects.
Linking social media icons to profile urls.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 
 				<footer class="major">
 					<p>
-						To view all of other work experiences, click <a href="professional-experience.html">here</a>
+						To view all of other work experiences, click <a
+							href="https://www.linkedin.com/in/chrismtz100/">here</a>
 					</p>
 				</footer>
 			</section>
@@ -145,7 +146,8 @@
 						<h3><b>Pokemon JS Version</b></h3>
 						<p>Created a Pokemon battle simulator using JavaScript and HTML/CSS only. </p>
 						<div class="githubButton">
-							<a href="https://github.com/chrismtz100/Pokemon-JavaScript-Version" class="button">View on GitHub</a>
+							<a href="https://github.com/chrismtz100/Pokemon-JavaScript-Version" class="button">View on
+								GitHub</a>
 						</div>
 					</li>
 					<li>
@@ -155,7 +157,8 @@
 							inside a 30 ft. radius that incorporated 4 sensors and communicated
 							with each other in real-time to provide complex environmental data.</p>
 						<div>
-							<a href="https://github.com/chrismtz100/Cellular-Utility-Expander" class="button">View on GitHub</a>
+							<a href="https://github.com/chrismtz100/Cellular-Utility-Expander" class="button">View on
+								GitHub</a>
 						</div>
 					</li>
 					<li>
@@ -165,13 +168,15 @@
 						<p>Designed and developed a GUI that communicated with a
 							Raspberry Pi that printed using salt.</p>
 						<div>
-							<a href="https://github.com/chrismtz100/Salt-Carpet-Printer-V1.0-GUI" class="button">View on GitHub</a>
+							<a href="https://github.com/chrismtz100/Salt-Carpet-Printer-V1.0-GUI" class="button">View on
+								GitHub</a>
 						</div>
 					</li>
 				</ul>
 				<footer class="major">
 					<p>
-						To view all of other projects, click <a href="all-projects.html">here</a>
+						To view all of other projects, click <a
+							href="https://github.com/chrismtz100?tab=repositories">here</a>
 					</p>
 				</footer>
 			</section>
@@ -196,8 +201,9 @@
 							<h3>Technical Skills</h3>
 						</header>
 						<p>
-							Unit Tests &bull; Technical Documentation &bull; Object-Oriented Programming Proficient &bull; 
-							Frontend Design &bull; Azure Deployment Processes &bull; Automated Tasks &bull; IT &bull; 
+							Unit Tests &bull; Technical Documentation &bull; Object-Oriented Programming Proficient
+							&bull;
+							Frontend Design &bull; Azure Deployment Processes &bull; Automated Tasks &bull; IT &bull;
 							Azure Databases &bull; MVC &bull; Git &bull; CI/CD
 						</p>
 					</section>
@@ -228,17 +234,13 @@
 					<dd><a href="#">chrismtz100@gmail.com</a></dd>
 				</dl>
 				<ul class="icons">
-					<li><a href="https://www.twitter.com/" class="icon brands fa-twitter alt"><span
-								class="label">Twitter</span></a></li>
-					<li><a href="https://www.Facebook.com/" class="icon brands fa-facebook-f alt"><span
-								class="label">Facebook</span></a></li>
-					<li><a href="https://www.Instagram.com/" class="icon brands fa-instagram alt"><span
-								class="label">Instagram</span></a></li>
 					<li><a href="https://www.github.com/chrismtz100" class="icon brands fa-github alt"><span
+								class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/chrismtz100/" class="icon brands fa-linkedin alt"><span
 								class="label">GitHub</span></a></li>
 				</ul>
 			</section>
-			<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+			<p class="copyright">&copy; Christian Martinez's Portfolio. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
 	</div>
 
