--- a/index.html
+++ b/index.html
@@ -226,12 +226,8 @@
 			<section>
 				<h2>Contact Me</h2>
 				<dl class="alt">
-					<dt>Address</dt>
+					<dt>Located</dt>
 					<dd>Edinburg, Texas 78541 &bull; USA</dd>
-					<dt>Phone</dt>
-					<dd>(956) 336-9575</dd>
-					<dt>Email</dt>
-					<dd><a href="#">chrismtz100@gmail.com</a></dd>
 				</dl>
 				<ul class="icons">
 					<li><a href="https://www.github.com/chrismtz100" class="icon brands fa-github alt"><span
