cleaner look push
updating portfolio to look cleaner and sleeker.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<span class="logo"><img src="images/gifs/howdy-cowboy.gif" alt="" width="100" height="auto" /></span>
+			<span class="logo"><img src="images/gifs/pepe-cowboy.gif" alt="" width="100" height="auto" /></span>
 			<h1>Howdy!</h1>
-			<h2><b>Welcome</b> and <b>thank you</b> for
+			<h2><b style="color: #efa8b0;">Welcome</b> and <b style="color: #8cc9f0;">thank you</b> for
 				stopping by my portfolio.
 			</h2>
 		</header>
@@ -49,11 +49,12 @@
 				<div class="spotlight">
 					<div class="content">
 						<header class="major">
-							<h2>My name is Christian Martinez!</h2>
+							<h2><b>ABOUT ME</b></h2>
 						</header>
-						<p>I'm a Software Engineer with nearly 2 years of professional work experience.
+						<p>My name is Christian Martinez! I'm a Software Engineer with nearly 2 years of professional work experience.
 							I graduated from <i>The University of Texas at Rio Grande Valley (UTRGV)</i>
-							in 2020 with a <b>B.S. in Computer Engineering</b> with emphasis in Software.
+							in 2020 with a B.S. in Computer Engineering with emphasis in Software. On the side, I'm very much into 
+							3D printing, playing board games, and fishing!
 						</p>
 					</div>
 					<span class="image"><img src="images/me.jpg" alt="" /></span>
@@ -63,12 +64,12 @@
 			<!-- First Section -->
 			<section id="first" class="main special">
 				<header class="major">
-					<h2>Work Experience</h2>
+					<h2><b>Work Experience</b></h2>
 				</header>
 				<div class="content">
 					<div>
-						<h2>Software Engineer (.NET) - Integrations</h2>
-						<h4>EngageSmart: InvoiceCloud | March 2021 - Present | Hybrid Remote</h4>
+						<h2 style="color: #efa8b0;">Software Engineer (.NET) - Integrations</h2>
+						<h4 style="color: #8cc9f0;">EngageSmart: InvoiceCloud | March 2021 - Present | Hybrid Remote</h4>
 						<div style="text-align: left;">
 							<ul>
 								<li>Implement new integrated solutions for clients that use InvoiceCloud's
@@ -85,8 +86,8 @@
 					<hr class="minborder">
 
 					<div>
-						<h2>IT Media Assistant</h2>
-						<h4>UTRGV Information Technology | August 2019 - July 2020 | Edinburg, TX</h4>
+						<h2 style="color: #efa8b0;">IT Media Assistant</h2>
+						<h4 style="color: #8cc9f0;">UTRGV Information Technology | August 2019 - July 2020 | Edinburg, TX</h4>
 						<div style="text-align: left;">
 							<ul>
 								<li>Lessened the time spent manually connecting over 200 IP addresses
@@ -100,8 +101,8 @@
 					<hr class="minborder">
 
 					<div>
-						<h2>Frontend Web Developer Intern</h2>
-						<h4>UTRGV Information Technology | August 2017 - May 2019 | McAllen, TX</h4>
+						<h2 style="color: #efa8b0;">Frontend Web Developer Intern</h2>
+						<h4 style="color: #8cc9f0;">UTRGV Information Technology | August 2017 - May 2019 | McAllen, TX</h4>
 						<div style="text-align: left;">
 							<ul>
 								<li>Debugged and updated the frontend of over 200 web
@@ -126,13 +127,13 @@
 			<!-- Second Section -->
 			<section id="second" class="main special">
 				<header class="major">
-					<h2>Projects</h2>
+					<h2><b>Projects</b></h2>
 				</header>
 				<ul class="features">
 					<li>
 						<span class="main spotlight image"><img src="images/project-icons/Bug Bag Manager.png"
 								alt="" /></span>
-						<h3><b>Bug Bag Manager</b></h3>
+						<h3>Bug Bag Manager</h3>
 						<p>Designed a bug tracker web application that monitors bugs
 							that occur in a SaaS application that uses Azure Databases
 							to store info.</p>
@@ -143,7 +144,7 @@
 					<li>
 						<span class="main spotlight image"><img src="images/project-icons/Pokemon JS Version.png"
 								alt="" /></span>
-						<h3><b>Pokemon JS Version</b></h3>
+						<h3>Pokemon JS Version</h3>
 						<p>Created a Pokemon battle simulator using JavaScript and HTML/CSS only. </p>
 						<div class="githubButton">
 							<a href="https://github.com/chrismtz100/Pokemon-JavaScript-Version" class="button">View on
@@ -152,7 +153,7 @@
 					</li>
 					<li>
 						<span class="main spotlight image"><img src="images/project-icons/CUE.png" alt="" /></span>
-						<h3><b>Cellular Utility Expander</b></h3>
+						<h3>Cellular Utility Expander</h3>
 						<p>Built a multisensory device that records data in any environment
 							inside a 30 ft. radius that incorporated 4 sensors and communicated
 							with each other in real-time to provide complex environmental data.</p>
@@ -164,7 +165,7 @@
 					<li>
 						<span class="main spotlight image"><img src="images/project-icons/Salt Printer Icon.png"
 								alt="" /></span>
-						<h3><b>Salt Carpet Printer</b></h3>
+						<h3>Salt Carpet Printer</h3>
 						<p>Designed and developed a GUI that communicated with a
 							Raspberry Pi that printed using salt.</p>
 						<div>
@@ -184,7 +185,7 @@
 			<!-- Get Started -->
 			<section id="cta" class="main special">
 				<header class="major">
-					<h2>Professional Skills</h2>
+					<h2><b>Professional Skills</b></h2>
 				</header>
 				<div class="main special">
 					<section>
@@ -224,7 +225,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<h2>Contact Me</h2>
+				<h2><b>Contact Me</b>Contact Me</h2>
 				<dl class="alt">
 					<dt>Located</dt>
 					<dd>Edinburg, Texas 78541 &bull; USA</dd>
