Removed duplicate Contact Me title.
removed duplicate contact me
updated header message

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 		<header id="header" class="alt">
 			<span class="logo"><img src="images/gifs/pepe-cowboy.gif" alt="" width="100" height="auto" /></span>
 			<h1>Howdy!</h1>
-			<h2><b style="color: #efa8b0;">Welcome</b> and <b style="color: #8cc9f0;">thank you</b> for
-				stopping by my portfolio.
-			</h2>
+			<h2>Crafting seamless <b style="color: #efa8b0;">integrated solutions</b> while ensuring quality through <b style="color: #8cc9f0;">unit testing and debugging</b>.</h2>
 		</header>
 
 		<!-- Nav -->
@@ -225,7 +223,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<h2><b>Contact Me</b>Contact Me</h2>
+				<h2><b>Contact Me</b></h2>
 				<dl class="alt">
 					<dt>Located</dt>
 					<dd>Edinburg, Texas 78541 &bull; USA</dd>
