--- a/index.html
+++ b/index.html
@@ -33,17 +33,18 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li><a href="#intro" class="active">About Me</a></li>
-				<li><a href="#first">Work Experience</a></li>
-				<li><a href="#second">Projects</a></li>
-				<li><a href="#cta">Contact Me</a></li>
+				<li><a href="#about-me" class="active">About Me</a></li>
+				<li><a href="#work-experience">Work Experience</a></li>
+				<li><a href="#projects">Projects</a></li>
+				<li><a href="#professional-skills">Professional Skills</a></li>
+				<li><a href="#contact-me">Contact Me</a></li>
 			</ul>
 		</nav>
 
 		<!-- Main -->
 		<div id="main">
 			<!-- Introduction -->
-			<section id="intro" class="main">
+			<section id="about-me" class="main">
 				<div class="spotlight">
 					<div class="content">
 						<header class="major">
@@ -60,7 +61,7 @@
 			</section>
 
 			<!-- First Section -->
-			<section id="first" class="main special">
+			<section id="work-experience" class="main special">
 				<header class="major">
 					<h2><b>Work Experience</b></h2>
 				</header>
@@ -123,7 +124,7 @@
 			</section>
 
 			<!-- Second Section -->
-			<section id="second" class="main special">
+			<section id="projects" class="main special">
 				<header class="major">
 					<h2><b>Projects</b></h2>
 				</header>
@@ -180,8 +181,8 @@
 				</footer>
 			</section>
 
-			<!-- Get Started -->
-			<section id="cta" class="main special">
+			<!-- Third Section -->
+			<section id="professional-skills" class="main special">
 				<header class="major">
 					<h2><b>Professional Skills</b></h2>
 				</header>
@@ -221,7 +222,7 @@
 		</div>
 
 		<!-- Footer -->
-		<footer id="footer">
+		<footer id="contact-me">
 			<section>
 				<h2><b>Contact Me</b></h2>
 				<dl class="alt">
