--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
 						<h4 style="color: #8cc9f0;">EngageSmart: InvoiceCloud | March 2021 - Present | Hybrid Remote</h4>
 						<div style="text-align: left;">
 							<ul>
-								<li>Implement new integrated solutions for clients that use InvoiceCloud's
-									electronic payment solutions to drive better customer engagement and
-									management experience.</li>
-								<li>Modify existing integration solution's pre-defined proprietary software
-									frameworks, data exchange methods, and coding patterns using C# or VB.NET
-									to keep biller's up to date with the latest service versions or updates.</li>
-								<li>Test Engineer for the Integrations team's pull requests.</li>
+								<li>Develop and deploy innovative solutions for both prospective and current clients, 
+									leveraging InvoiceCloud's electronic payment platforms to enhance customer engagement 
+									and optimize management experiences.</li>
+								<li>Enhance and adapt pre-established proprietary software frameworks, data exchange protocols, 
+									and coding paradigms through proficient utilization of C# or VB.NET. 
+									Ensure seamless integration with the latest service iterations and updates.</li>
+								<li>Engage as Test Engineer within the Integrations team, meticulously evaluating 
+									and validating the team's PRs to guarantee the reliability and efficacy 
+									of the developed solutions.</li>
 							</ul>
 						</div>
 					</div>
@@ -89,10 +91,31 @@
 						<h4 style="color: #8cc9f0;">UTRGV Information Technology | August 2019 - July 2020 | Edinburg, TX</h4>
 						<div style="text-align: left;">
 							<ul>
-								<li>Lessened the time spent manually connecting over 200 IP addresses
-									from UTRGV, Zoom, and MCU sessions from paper to Google Spreadsheets.</li>
-								<li>Provided in-person or online technical support to over 100
-									virtual sessions using Cisco MCU 4510 throughout the campus.</li>
+								<li>Streamlined the process of transferring and consolidating data involving more 
+									than 200 IP addresses from UTRGV, Zoom, and MCU sessions, transitioning 
+									from manual entry on paper to efficient management within Google Spreadsheets.</li>
+								<li>Delivered comprehensive technical assistance, both in-person and via online channels, 
+									to facilitate over 100 virtual sessions utilizing Cisco MCU 4510 across the campus environment.</li>
+							</ul>
+						</div>
+					</div>
+
+					<hr class="minborder">
+
+					<div>
+						<h2 style="color: #efa8b0;">Environmental Engineer Intern</h2>
+						<h4 style="color: #8cc9f0;">Savannah River Nuclear Solutions | May 2019 - July 2019 | Aiken, SC</h4>
+						<div style="text-align: left;">
+							<ul>
+								<li>Conducted extensive research into the methodology behind the conversion of 34 million gallons 
+									of nuclear waste into a vitrified glass form, subsequently destined for containment within 
+									stainless steel canisters. The aim was to mitigate the potential of radiation contamination 
+									within the environment.</li>
+								<li>Spearheaded data-oriented marketing teams in the analysis and anticipation of customer 
+									requirements, leveraging the GetResponse CRM (Customer Relationship Management) 
+									platform and harnessing the power of Google Analytics. The effort encompassed 
+									the interpretation of user data, spanning newsletter subscriptions, wish list 
+									activities, and web traffic, culminating in insights derived from over 33,000 customers.</li>
 							</ul>
 						</div>
 					</div>
@@ -104,12 +127,14 @@
 						<h4 style="color: #8cc9f0;">UTRGV Information Technology | August 2017 - May 2019 | McAllen, TX</h4>
 						<div style="text-align: left;">
 							<ul>
-								<li>Debugged and updated the frontend of over 200 web
-									pages using the Cascade CMS (Content Management System).</li>
-								<li>Led data-driven marketing teams to predict over 33,000 customers'
-									needs from newsletter sign-ups, wish lists, and web traffic by
-									utilizing GetResponse CRM (Customer Relation Management) and
-									Google Analytics.</li>
+								<li>Methodically rectified and modernized the user interface of more than 200 web pages 
+									utilizing the Cascade CMS (Content Management System), ensuring seamless 
+									functionality and an enhanced user experience.</li>
+								<li>Spearheaded data-oriented marketing teams in the analysis and anticipation of customer 
+									requirements, leveraging the GetResponse CRM (Customer Relationship Management) 
+									platform and harnessing the power of Google Analytics. The effort encompassed 
+									the interpretation of user data, spanning newsletter subscriptions, wish list 
+									activities, and web traffic, culminating in insights derived from over 33,000 customers.</li>
 							</ul>
 						</div>
 					</div>
