removing the best thing on my portfolio
removing cringe pepe

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<span class="logo"><img src="images/gifs/pepe-cowboy.gif" alt="" width="100" height="auto" /></span>
-			<h1>Howdy!</h1>
+			<!-- <span class="logo"><img src="images/gifs/pepe-cowboy.gif" alt="" width="100" height="auto" /></span> -->
+			<h1>Christian Martinez</h1>
 			<h2>Crafting seamless <b style="color: #efa8b0;">integrated solutions</b> while ensuring quality through <b style="color: #8cc9f0;">unit testing and debugging</b>.</h2>
 		</header>
 
@@ -50,7 +50,7 @@
 						<header class="major">
 							<h2><b>ABOUT ME</b></h2>
 						</header>
-						<p>My name is Christian Martinez! I'm a Software Engineer with nearly 2 years of professional work experience.
+						<p>Howdy! My name is Christian Martinez and I'm a Software Engineer with more than 2 years of professional work experience.
 							I graduated from <i>The University of Texas at Rio Grande Valley (UTRGV)</i>
 							in 2020 with a B.S. in Computer Engineering with emphasis in Software. On the side, I'm very much into 
 							3D printing, playing board games, and fishing!
